<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_scan"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_book_ride"
            android:icon="@drawable/ic_my_commission"
            android:title="@string/book_ride" />

        <item
            android:id="@+id/nav_bus_list"
            android:icon="@drawable/ic_product_commission"
            android:title="@string/bus_list" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/sign_out" />

    </group>

</menu>
