<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/logo_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:visibility="gone"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <EditText
                android:id="@+id/eTxtUsername"
                style="@style/CustomEditText"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <EditText
                android:id="@+id/eTxtToken"
                style="@style/CustomEditText"
                android:inputType="textPassword"
                android:hint="@string/password" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/eTxtName"
                style="@style/CustomEditText"
                android:hint="@string/full_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <EditText
                android:id="@+id/eTxtNumber"
                style="@style/CustomEditText"
                android:hint="@string/mobile_number"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            style="@style/CustomButton"
            android:textSize="@dimen/text_size_medium"
            android:background="@color/green"
            android:layout_width="@dimen/_225sdp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/txtAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:visibility="visible"
            android:maxLines="1"
            android:text="@string/already_have_an_account"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/CustomButton"
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/sign_in"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
