<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="@dimen/_225sdp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/logo_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/app_name"
            android:visibility="gone"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <EditText
                android:id="@+id/eTxtUsername"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/username"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <EditText
                android:id="@+id/eTxtPassword"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/space_6sdp"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:layout_marginTop="@dimen/space_10sdp"
            android:text="@string/sign_up" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="100dp"
                android:layout_height="56dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="0dp"
                android:gravity="center_vertical"
                android:text="@string/register_now"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="150dp"
                android:layout_height="56dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:gravity="end|center_vertical"
                android:text="@string/forgot_password"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>