<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/eTxtEmail"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/eTxtPassword"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:password="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_spacing"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                style="@style/CustomButton"
                android:layout_width="125dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/back" />

            <Button
                android:id="@+id/btnNext"
                style="@style/CustomButtonBlue"
                android:layout_width="125dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/next" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
