<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please enter your email address."
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/eTxtEmail"
            style="@style/CustomEditTextWithBg"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/content_spacing"
            android:hint="@string/email" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/content_spacing"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                style="@style/CustomButton"
                android:layout_width="125dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/back" />

            <Button
                android:id="@+id/btnNext"
                style="@style/CustomButtonBlue"
                android:layout_width="125dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/next" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
