<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.BusDetailsActivity">

    <include layout="@layout/layout_toolbar_home" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutPickup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/_10sdp">

        <EditText
            android:id="@+id/eTxtNumber"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:hint="@string/mobile_number"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutDropOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutPickup"
        android:layout_marginTop="@dimen/_10sdp">

        <EditText
            android:id="@+id/eTxtToken"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/space_6sdp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnBook"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutDropOff"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:background="@color/green"
        android:text="@string/book_ride" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/txtMessageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text=""
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtMessageBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text=""
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txtMessageTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text=""
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txtMessageStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text=""
            android:textStyle="normal" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        style="@style/CustomButton"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_10sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:background="@color/green"
        android:text="@string/back"
        android:textSize="@dimen/text_size_medium" />

</RelativeLayout>
