<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:background="@drawable/bg_rounded_white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin_4dp"
        android:paddingTop="2dp"
        android:paddingRight="@dimen/margin_4dp"
        android:paddingBottom="2dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/eTxtSearch"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="0.88"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:hint="@string/txt_search"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:paddingLeft="@dimen/element_spacing"
            android:singleLine="true"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="0.12"
            android:padding="10dp"
            android:src="@drawable/ic_close" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtBookingType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/spnBookingTypes"
            android:layout_alignBottom="@+id/spnBookingTypes"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_toStartOf="@+id/spnBookingTypes"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/booking_type"
            android:textSize="@dimen/text_size_medium" />

        <Spinner
            android:id="@+id/spnBookingTypes"
            style="@style/SpinnerTheme"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/space_6sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="8dp"
            android:entries="@array/booking_types"
            android:gravity="center"
            android:overlapAnchor="false"
            android:paddingStart="@dimen/_6sdp"
            android:paddingEnd="@dimen/_6sdp"
            android:prompt="@string/select"
            android:spinnerMode="dropdown"
            android:text="@string/select" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtErrorMsg"
        style="@style/ErrorMessageStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:textIsSelectable="true"
        tools:text="Product Commission" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>